--- a/configs/CSL-Daily.yaml
+++ b/configs/CSL-Daily.yaml
@@ -1,1 +1,18 @@
 dataset_root: /Users/gufran/Developer/data/sign/CSL-Daily
+pose_root: /Users/gufran/Developer/data/sign/CSL-Daily/openpose
+suffix_prefix: sf_
+max_possible_glosses: 25
+lang: Chinese
+
+pose_encoder_cfg: 
+  net: [[64, 64, 16, 7, 2], [64, 64, 16, 3, 1],
+        [64, 128, 32, 3, 1], [128, 128, 32, 3, 1],
+        [128, 256, 64, 3, 2], [256, 256, 64, 3, 1],
+        [256, 256, 64, 3, 1], [256, 256, 64, 3, 1],]
+  body: [0,1,3,5,7,9,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,2,4,6,8,10,112,113,
+          114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,23,26,29,33,36,39,41,43,46,48,
+          53,56,59,62,65,68,71,72,73,74,75,76,77,79,80,81]
+  left: [0,1,3,5,7,9,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111]
+  right: [0,2,4,6,8,10,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132]
+  face: [23,26,29,33,36,39,41,43,46,48,53,56,59,62,65,68,71,72,73,74,75,76,77,79,80,81]
+  mouth: [71,72,73,74,75,76,77,79,80,81]
